Adjust pmanager API; start on K8S manifests
